--- a/templates/base.html
+++ b/templates/base.html
@@ -42,48 +42,43 @@
       <div class="col-sm-auto  sticky-top" style="background-color: #00838f;">
         <div class="d-flex flex-sm-column flex-row flex-nowrap  align-items-center sticky-top" style="background-color: #00838f;">
           <ul
-            class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center align-items-center mt-2"
-            style="font-size: 15px; ">
-            <li class="nav-item mb-3">
-              <a href="{% url 'home' %}" class="nav-link" title="HOME" data-bs-toggle="tooltip"
-                data-bs-placement="right" data-bs-original-title="Home">
-                <img src="{% static 'img/logow.png' %}" width="30" height="23" alt="">
-              </a>
-            </li>
+            class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center align-items-center mt-5"
+            style="font-size: 10px; ">
+
             <li class="nav-item mb-3">
               <a href="{% url 'home' %}" class="nav-link " title="HOME" data-bs-toggle="tooltip"
                 data-bs-placement="right" data-bs-original-title="Home">
-                <i class="bi bi-house-door-fill fs-4" style="color: #fff;"></i>
+                <i class="bi bi-house-door-fill fs-5" style="color: #fff;"></i>
               </a>
             </li>
             <li class="nav-item mb-3">
               <a href="{% url 'add_task' %}" class="nav-link" title="ADD TASK" data-bs-toggle="tooltip"
                 data-bs-placement="right" data-bs-original-title="Dashboard">
-                <i class="bi bi-plus-square-fill fs-4" style="color: #fff;"></i>
+                <i class="bi bi-plus-square-fill fs-5" style="color: #fff;"></i>
               </a>
             </li>
             <li class="nav-item mb-3">
               <a href="{% url 'completed_task' %}" class="nav-link" title="COMPLETED TASK" data-bs-toggle="tooltip"
                 data-bs-placement="right" data-bs-original-title="Orders">
-                <i class="bi bi-check2-square fs-4" style="color: #fff;"></i>
+                <i class="bi bi-check2-square fs-5" style="color: #fff;"></i>
               </a>
             </li>
             <li class="nav-item mb-3">
               <a href="{% url 'pending_task' %}" class="nav-link" title="PENDING TASK" data-bs-toggle="tooltip"
                 data-bs-placement="right" data-bs-original-title="Products">
-                <i class="bi bi-hourglass-split fs-4" style="color: #fff;"></i>
+                <i class="bi bi-hourglass-split fs-5" style="color: #fff;"></i>
               </a>
             </li>
             <li class="nav-item mb-3">
               <a href="#" class="nav-link" title="" data-bs-toggle="tooltip" data-bs-placement="right"
                 data-bs-original-title="Customers">
-                <i class="bi-people fs-4" style="color: #fff;"></i>
+                <i class="bi-people fs-5" style="color: #fff;"></i>
               </a>
             </li>
             <li class="nav-item mb-3">
               <a href="#" class="nav-link" title="LOG OUT" data-bs-toggle="tooltip" data-bs-placement="right"
                 data-bs-original-title="Customers">
-                <i class="bi bi-box-arrow-right fs-4" style="color: #fff;"></i>
+                <i class="bi bi-box-arrow-right fs-5" style="color: #fff;"></i>
               </a>
             </li>
           </ul>
@@ -143,7 +138,7 @@
 
     <div class="text-center">
       <a class="img" href="#">
-        <img src="{% static 'img/namelogo.png' %}" width="100px" height="25px" alt="">
+        <img src="{% static 'img/logof.png' %}" width="100px" height="25px" alt="">
       </a>
     </div>
     <!-- Copyright -->
