--- a/templates/signin.html
+++ b/templates/signin.html
@@ -43,13 +43,13 @@
                     <div class="col" style="text-align: right;">
                         <div class="cs-form" style="text-align: left;">
                             <label>User Name</label>
-                            <input type="text" id="username" name="username" class="form-control" />
+                            <input type="text" id="username" name="username" class="form-control" required/>
 
                         </div>
 
                         <div class="cs-form" style="text-align: left;">
                             <label>Password</label>
-                            <input type="password" id="pass1" name="pass1" class="form-control" />
+                            <input type="password" id="pass1" name="pass1" class="form-control" required/>
 
                         </div>
                         <p class="text-muted text-center small">At least 8 characters and 1 digit</p>
